fix contrast on tabs

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -17,7 +17,7 @@ $form-text: #e6e6e6;
 $table-color: #dedede !default;
 $nav-link-color: $p5-red-light !default;
 $nav-link-hover-color: $p5-red !default;
-$nav-tabs-link-active-color: $p5-red !default;
+$nav-tabs-link-active-color: $p5-red-light !default;
 $nav-pills-link-active-color: $p5-red !default;
 $nav-pills-link-active-bg: #222 !default;
 
